--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <h1>Explore the world's best web designs.</h1>
       <h2>Created by top-rated design and creative professionals.</h2>
     </div>
-    <input type="text" placeholder="Search..."/>
+    <input id="search" type="text" placeholder="Search..."/>
     <div id="trending">
       Trending searches
       <p>Content</p>
